Updated the interface and sorted out all the files

--- a/Book Management System.vcxproj
+++ b/Book Management System.vcxproj
@@ -147,10 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Admin.cpp" />
     <ClCompile Include="Book Management System.cpp" />
     <ClCompile Include="Book.cpp" />
-    <ClCompile Include="BookList.cpp" />
     <ClCompile Include="LinkedList.cpp" />
+    <ClCompile Include="Staff.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="README.txt" />
@@ -159,9 +160,10 @@
     <Text Include="temp.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Admin.h" />
     <ClInclude Include="Book.h" />
-    <ClInclude Include="BookList.h" />
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="Staff.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
