Admin.cpp is finally finshed! guest interface has been removed. login report work nicely. Overall project has been finished with suitable error checking. However needs to be polished to look more aesthetically pleasing

--- a/Book Management System.vcxproj
+++ b/Book Management System.vcxproj
@@ -154,6 +154,8 @@
     <ClCompile Include="Staff.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Budget.txt" />
+    <Text Include="LoginReport.txt" />
     <Text Include="README.txt" />
     <Text Include="Existing Users.txt" />
     <Text Include="Books.txt" />
